# homecook

./: CNAME  README.md  dune-project  homecook.bc.js  homecook.opam  index.html
.github/workflows/: deploy.yml
src/: chessboard.ml  chessboard.mli  color.ml  color.mli  dune  file.ml  file.mli  homecook_lib.ml  piece.ml  piece.mli  piece_kind.ml  piece_kind.mli  rank.ml  rank.mli  square.ml  square.mli
